newclay/test/Compiler/Propagation/Fail/LabeledBlockCodeBody/main.clay
// This is not allowed, because breaking would bypass returning any values
main() @foo {
    if (false)
        return 1;
    break @foo;
}
